Natural language: X icon to remove label

--- a/NaturalLanguage/home.html
+++ b/NaturalLanguage/home.html
@@ -47,6 +47,24 @@
             fieldset.richFieldset .bit.label.focused {
                 border: 1px solid blue;
             }
+            fieldset.richFieldset .bit.label .close {
+                border: 1px solid silver;
+                background: white;
+                padding: 0 1px 0 1px;
+                margin: 2px;
+                font-size: 0.6em;
+                border-radius: 3px;
+                float: right;
+                width: 8px;
+                height: 10px;
+                text-align: center;
+                text-decoration: none;
+                color: silver;
+            }
+            fieldset.richFieldset .bit.label .close:hover {
+                border-color: gray;
+                color: gray;
+            }
             fieldset.richFieldset .fieldOutput ul {
                 margin: 5px;
                 padding: 0;
