Label edit mode

--- a/NaturalLanguage/home.html
+++ b/NaturalLanguage/home.html
@@ -47,6 +47,9 @@
             fieldset.richFieldset .bit.label.focused {
                 border: 1px solid blue;
             }
+            fieldset.richFieldset .bit.label.hidden {
+                display: none;
+            }
             fieldset.richFieldset .bit.label .close {
                 border: 1px solid silver;
                 background: white;
