--- a/NaturalLanguage/home.html
+++ b/NaturalLanguage/home.html
@@ -16,7 +16,7 @@
                 width: 500px;
                 overflow: hidden;
             }
-            fieldset.richFieldset .inputContainer {
+            fieldset.richFieldset .inputWrapper {
                 overflow: hidden;
             }
             fieldset.richFieldset .bit {
@@ -83,14 +83,14 @@
     <body>
         <form id="bookingForm">
             <fieldset rel="firstField" class="richFieldset">
-                <div class="bit inputContainer">
+                <div class="bit inputWrapper">
                     <textarea id="firstField" type="text" placeholder="passenger, etc." wrap="off"></textarea>
                     <div id="firstFieldOutput" class="fieldOutput"></div>
                 </div>
             </fieldset>
 
             <fieldset rel="secondField" class="richFieldset">
-                <div class="bit inputContainer">
+                <div class="bit inputWrapper">
                     <textarea id="secondField" type="text" placeholder="from, via, to, time..." wrap="off"></textarea>
                     <div id="secondFieldOutput" class="fieldOutput"></div>
                 </div>
@@ -131,10 +131,10 @@
 
             $(document).ready(function(){
                 // Command line controller
-                commandLine = new CommandLine($('#bookingForm'), new EnglishLanguage())
+                naturalInput = new NaturalInput($('#bookingForm'), new EnglishLanguage())
 
                 // Inputs registration
-                commandLine.registerInput({
+                naturalInput.registerInput({
                     input:$('#firstField'),
                     fields:['customer_info'],
                     afterParsed:function(input, parsed) {
@@ -145,14 +145,14 @@
                             
                             $('#firstFieldOutput').html('<ul><li>'+parsed.value.formatted+'</li></ul>');
                         } else if (parsed.hints) {
-                            commandLine.showHints(input, parsed);
+                            naturalInput.showHints(input, parsed);
                         } else {
                             $('#firstFieldOutput').empty();
                         }
                     },
                     hints:[]
                 });
-                commandLine.registerInput({
+                naturalInput.registerInput({
                     input:$('#secondField'),
                     fields:['pickup_location','via','dropoff_location','pickup_time'],
                     multipleFields:['via'],
@@ -164,14 +164,14 @@
                                 $('#secondFieldOutput').html('<ul><li>'+parsed.value.formatted+'</li></ul>');
                             }
                         } else if (parsed.hints) {
-                            commandLine.showHints(input, parsed);
+                            naturalInput.showHints(input, parsed);
                         } else {
                             $('#secondFieldOutput').empty();
                         }
                     },
                     hints:['from {location}','to {location}','via {location}','soon','asap','now','at {pickup time}','in {time from now}','tomorrow at {pickup time}','monday at {pickup time}','tuesday at {pickup time}','wednesday at {pickup time}','thursday at {pickup time}','friday at {pickup time}','saturday at {pickup time}']
                 });
-                commandLine.initialize();
+                naturalInput.initialize();
             });
         </script>
     </body>
